# FISSURE

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  docker-compose.yml  example.env  install
Crafted Packets/Scapy/: temp.cap
Installer/: disk_usage.txt  fissure-apptainer.sh  fissure_apptainer.def  helpful_apptainer_commands.txt  install_apptainer.sh  installer  password_prompt_exceptions.txt
Installer/Modes/: base.py  custom.py  dashboard.py  hiprfisr.py  sensornode.py
Installer/OS/: OS_installer_template.py  backbox  backbox.py  disk_usage.txt  dragonOS_focal  dragonOS_focal.py  dragonOS_noble  dragonOS_noble.py  kali23_1  kali23_1.py  kde_neon.py  parrot_os  parrot_os.py  raspberry_pi_os  raspberry_pi_os.py  ubuntu18_04.py  ubuntu20_04  ubuntu20_04.py  ubuntu22_04  ubuntu22_04.py  ubuntu24_04  ubuntu24_04.py
Plugins/Base/: actions.py
Plugins/Dummy/: actions.py
Plugins/Mission-01/: actions.py  actions_original.py
Plugins/WiFi/: actions.py
Tools/: hackrf_sweep_test.py  replay_cot_log.py  rtl_power_test.py
Tools/Demo_Support/: a  dlink_exploit_packet_crafter.yaml  dlink_reboot_packet_crafter.yaml  uci_commands.txt
Tools/Listener_Test_Scripts/: alerts1.txt  http_server.py  mqtt_test.txt  serial_test.txt  tcp_udp_test.txt  (+2 more)
Tools/old_plugins/lora_lib/gr_blocks/gr-LoRa_AIS/python/LoRa_AIS/bindings/: CMakeLists.txt
UI/: FissureDashboard.ui  dashboard.ui  demod.ui  download_map_pack.ui  hardware_select.ui  install.ui  install2.ui  node_configure.ui  node_select.ui  options.ui
YAML/: fissure_config.yaml  targets.yaml
db/: fissure_db_dump.sql
(+417 files in other folders)
